--- a/xterm/.editorconfig
+++ b/xterm/.editorconfig
@@ -5,8 +5,9 @@ indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf
 
-[*.js]
+[*.{j,t}s]
 max_line_length = 100
 
 [*.css]
